force-app/main/default/objects/Account_Executive__c/Account_Executive__c.object-meta.xml
<CustomObject>
    <description>ALL Account Executives with references to the Jobs.</description>
    <label>Account Executive</label>
    <nameField>
        <label>Account Executive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Executives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>