force-app/main/default/objects/Account_Executive__c/fields/AE1__c.field-meta.xml
<CustomField>
    <fullName>AE1__c</fullName>
    <formula>IF( Name = ( ATIJob__r.Account_Executive_1__r.FirstName  &amp; &quot; &quot; &amp; ATIJob__r.Account_Executive_1__r.LastName), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE1</label>
    <type>Checkbox</type>
</CustomField>