force-app/main/default/objects/Account_Executive__c/fields/AE2__c.field-meta.xml
<CustomField>
    <fullName>AE2__c</fullName>
    <formula>IF( Name = (ATIJob__r.Account_Executive_2__r.FirstName &amp; &quot; &quot; &amp; ATIJob__r.Account_Executive_2__r.LastName), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE2</label>
    <type>Checkbox</type>
</CustomField>