force-app/main/default/objects/Account_Executive__c/fields/ATIJob__c.field-meta.xml
<CustomField>
    <fullName>ATIJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATI Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ATI_Job__c.Account_Executive_1__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Account Executives</relationshipLabel>
    <relationshipName>Account_Executives</relationshipName>
    <type>Lookup</type>
</CustomField>