force-app/main/default/objects/Account_Executive__c/fields/Formula_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text_1__c</fullName>
    <formula>If(  OwnerId = $User.Id , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Text 1</label>
    <type>Checkbox</type>
</CustomField>