force-app/main/default/objects/Account_Executive__c/fields/Formula_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text_2__c</fullName>
    <formula>IF(OR($User.Id = OPID__c, $User.Id = OwnerId),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Text 2</label>
    <type>Checkbox</type>
</CustomField>