force-app/main/default/objects/Account_Executive__c/fields/Job_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Created_Date__c</fullName>
    <formula>ATIJob__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Created Date</label>
    <type>DateTime</type>
</CustomField>