force-app/main/default/objects/Account_Executive__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <description>Check User Role</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>UserRole</label>
    <type>Text</type>
</CustomField>